request and sync added to button click

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <h1>Hello World!</h1>
+    <button class="submit-button">Submit</button>
 
     <script src="js/bundle.js"></script>
   </body>
